<resources>
    <string name="app_name">InventoryApp</string>
    <!-- Title text for the empty view, which describes empty database[CHAR LIMIT=50] -->
    <string name="empty_view_title_text">No Stock? </string>
    <!-- Subtitle text for the empty view that prompts the user to add a product [CHAR LIMIT=50] -->
    <string name="empty_view_subtitle_text">What am I paying you for?</string>
    <!-- Label for overflow menu option that inserts fake product data into the app [CHAR LIMIT=20] -->
    <string name="action_insert_dummy_data">Insert Dummy Data</string>
    <!-- Label for overflow menu option that deletes all product data in the app [CHAR LIMIT=20] -->
    <string name="action_delete_all_entries">Delete All Products</string>
    <!-- Title for the activity to add a new Product [CHAR LIMIT=20] -->
    <string name="editor_activity_title_new_product">Add a Product</string>

    <!-- Title for the activity to edit an existing Product [CHAR LIMIT=20] -->
    <string name="editor_activity_title_edit_product">Edit Product</string>

    <!-- Label for editor menu option to save Product and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Label for editor overflow menu option that deletes the current Product [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>

    <!-- Toast message in editor when new Product has been successfully inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_product_successful">Product saved</string>
    <!-- Toast message in editor when new product has failed to be inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_product_failed">Error with saving product</string>

    <!-- Toast message in editor when current product was successfully updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_product_successful">Product updated</string>

    <!-- Toast message in editor when current Product has failed to be updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_product_failed">Error with updating product</string>

    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>

    <!-- Dialog button text for the option to keep editing the current product [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>

    <!-- Toast message in editor when current product was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_product_successful">Product deleted</string>

    <!-- Toast message in editor when current Product has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_product_failed">Error with deleting product</string>

    <!-- Dialog message to ask the user to confirm deleting the current product [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this product?</string>

    <!-- Dialog button text for the option to confirm deleting the current product [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current product [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>

    <!-- Label for overview category of attributes in the editor [CHAR LIMIT=30] -->
    <string name="category_product">Product</string>

    <!-- Label for quantity information in the editor [CHAR LIMIT=30] -->
    <string name="category_quantity">Quantity</string>

    <!-- Label for price information in the editor [CHAR LIMIT=30] -->
    <string name="category_price">Price (€)</string>
    <!-- Label for image information in the editor [CHAR LIMIT=30] -->
    <string name="category_image">Image</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_product_name">Name</string>

    <!-- Text hint for quantity field in the editor [CHAR LIMIT=30] -->
    <string name="hint_quantity">0</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_price">0</string>

    <!-- Units for weight of the product (kilograms) [CHAR LIMIT=5] -->
    <string name="unit_currency">€</string>

    <!-- Label for dropdown menu option if the stock level is unknown [CHAR LIMIT=20] -->
    <string name="unknown_quantity">Unknown quantity</string>

    <!-- Label for the product's price if the price is unknown [CHAR LIMIT=20] -->
    <string name="unknown_price">Unknown price</string>

    <!-- Image content description -->
    <string name="image_view">Product image</string>

    <!-- Sale Button text -->
    <string name="sale_button">SALE</string>

    <string name="decrement_button">-</string>
    <string name="increment_button">+</string>
    <string name="category_actions">Further Actions</string>
    <string name="contact_supplier">Order More</string>
    <string name="delete_product">Delete From Inventory</string>
    <string name="image_button">ADD IMAGE</string>
    <string name="missing_image">Product Image is required</string>
    <string name="missing_product_name">Missing Product Name</string>
    <string name="missing_quantity">Quantity value is missing</string>
    <string name="missing_price">Price information is missing</string>
    <string name="quantity_required">Initial quantity value required</string>
    <string name="invalid_number">Invalid Value</string>
</resources>
