<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin">

    <TextView
        android:id="@+id/product_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="#2B3D4D"
        android:text="Name" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category_quantity"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/colorAccent"/>

        <TextView
            android:id="@+id/current_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:paddingStart="8dp"
            android:text="Stock"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="#AEB6BD"
            android:textStyle="bold" />

        <Button
            android:id="@+id/sale_button"
            android:layout_width="152dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:paddingLeft="8dp"
            android:text="@string/sale_button"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category_price"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/colorAccent"
            />

        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:paddingStart="35dp"
            android:text="Price"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="#AEB6BD"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>